--- a/calculator.html
+++ b/calculator.html
@@ -7,37 +7,40 @@
 	<link rel="stylesheet" type="text/css" href="calculator.css">
 </head>
 <body>
-	<table class="calculator">
+	<table class="Calculator">
 		<tbody>
 			<tr>
-				<td class="calculator_output" colspan="4">0</td>
+				<td class="Calculator__output" colspan="4">0</td>
 			</tr>
 			<tr>
-				<td class="calculator_numb">7</td>
-				<td class="calculator_numb">8</td>
-				<td class="calculator_numb">9</td>
-				<td class="calculator_fan">/</td>
+				<td class="Calculator__numb">7</td>
+				<td class="Calculator__numb">8</td>
+				<td class="Calculator__numb">9</td>
+				<td class="Calculator__fun">/</td>
 			</tr>
 			<tr>
-				<td class="calculator_numb">4</td>
-				<td class="calculator_numb">5</td>
-				<td class="calculator_numb">6</td>
-				<td class="calculator_fan">*</td>
+				<td class="Calculator__numb">4</td>
+				<td class="Calculator__numb">5</td>
+				<td class="Calculator__numb">6</td>
+				<td class="Calculator__fun">*</td>
 			</tr>
 			<tr>
-				<td class="calculator_numb">1</td>
-				<td class="calculator_numb">2</td>
-				<td class="calculator_numb">3</td>
-				<td class="calculator_fan">-</td>
+				<td class="Calculator__numb">1</td>
+				<td class="Calculator__numb">2</td>
+				<td class="Calculator__numb">3</td>
+				<td class="Calculator__fun">-</td>
 			</tr>
 			<tr>
-				<td class="calculator_numb" colspan="3">0</td>
-				<td class="calculator_fan">+</td>
+				<td class="Calculator__numb" colspan="3">0</td>
+				<td class="Calculator__fun">+</td>
 			</tr>
 			<tr>
-				<td class="calculator_enter" colspan="4">=</td>
+				<td class="Calculator__enter" colspan="4">=</td>
 			</tr>
 		</tbody>
 	</table>
+
+	<script type="text/javascript" src="jquery-3.5.1.min.js"></script>
+	<script type="text/javascript" src="main.js"></script>
 </body>
 </html>
